objects/DMAPP__DM_DVLS_Component_Quicklink__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of links for a given eLearning Component. It is accessible as a detail section underneath the Component page</description>
    <fields>
        <fullName>DMAPP__DM_DVLS_Component__c</fullName>
        <label>Component</label>
        <referenceTo>DMAPP__DM_DVLS_Component__c</referenceTo>
        <relationshipName>DM_DVLS_Component_Quicklinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <inlineHelpText>Overview of the quicklink / content item. 

This is displayed to the user in the content item pop-up display.</inlineHelpText>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Link__c</fullName>
        <inlineHelpText>URL to the associated file.

Note that if this is a video file, you should not include the file extension (e.g. .flv) in the URL. Dealmaker assumes that you will provide the required file types for the various browsers. 
(1) .mp4
(2) .webm
(3) .flv.</inlineHelpText>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <inlineHelpText>Order in which the content item is displayed in the content item pop-up.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Ref_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique reference for the content item. This value is used when associating a content item with a component.</inlineHelpText>
        <label>Ref ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <inlineHelpText>Select what type the file is. Dealmaker will:
- play &quot;video&quot; files in the video window.
- provide a download link for the &quot;download&quot; files.
- provide a hyperlink to the &quot;link&quot; destination.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Component Link</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLearning Component Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>